feat: Implement Connection Pool Management and Retry Handling for OpenAI API
- Added ConnectionPoolManager to manage and monitor connection pooling for OpenAI API requests.
- Introduced metrics for active connections, total connections created, and connection failures.
- Implemented scheduled tasks for monitoring and optimizing connection pool utilization.
- Created OpenAiRetryHandler to handle retries for API calls with customizable retry configurations.
- Enhanced OpenAiService to utilize the new connection pool and retry mechanisms.
- Added OpenAiInputValidator for input validation, including checks for suspicious content and prompt length.
- Improved logging with SecureLogger for better traceability of API calls and errors.
- Updated existing methods to incorporate new validation and retry logic.